--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Florcy Morisset
   <h1>Blog Posts</h1>
   <ul class="posts">
     {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.url }}/blog-template{{ post.url }}">{{ post.title }}</a></li>
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.url }}/Blog2{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
 
