--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@ title: Florcy Morisset
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.url }}/Blog2{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
+  
+  <h1>Final Project</h1>
+  <ul class="posts">
+    <li><span>Presenting...</span> &raquo; <a href="{{ site.url }}/Blog2/finalproject.html">Mapping African Textiles</a></li>
+  
+  </ul>
 
   <h1>Class Lectures, Demos, Syllabus</h1>
   <ul class="posts">
